--- a/antigravity/scratch/mess-khojo/client/index.html
+++ b/antigravity/scratch/mess-khojo/client/index.html
@@ -10,7 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600;700&display=swap"
     rel="stylesheet">
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self' https://*.firebaseio.com https://*.googleapis.com; img-src 'self' data: https://*.googleapis.com https://*.firebaseapp.com https://firebasestorage.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseio.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com wss://*.firebaseio.com https://www.google-analytics.com;">
+    content="default-src 'self' https://*.firebaseio.com https://*.googleapis.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; img-src 'self' data: https://*.googleapis.com https://*.gstatic.com https://*.google.com https://*.firebaseapp.com https://firebasestorage.googleapis.com http://maps.google.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.firebaseio.com https://www.googletagmanager.com https://*.googleapis.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com wss://*.firebaseio.com https://www.google-analytics.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; frame-src 'self' https://accounts.google.com https://*.firebaseapp.com;">
 </head>
 
 <body>
