Fix: Enhance favicon configuration for better browser compatibility

--- a/antigravity/scratch/mess-khojo/client/index.html
+++ b/antigravity/scratch/mess-khojo/client/index.html
@@ -3,12 +3,44 @@
 
 <head>
   <meta charset="UTF-8" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mess Khojo</title>
+
+  <!-- Favicon - Multiple sizes for better browser compatibility -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
+  <link rel="shortcut icon" href="/logo.png" />
+
+  <!-- Primary Meta Tags -->
+  <title>Mess Khojo - Find your comfortable stay. Search for the best student messes nearby</title>
+  <meta name="title" content="Mess Khojo - Find Student Messes & PG Accommodations" />
+  <meta name="description"
+    content="Find your comfortable stay. Search for the best student messes nearby. Use Current Location. Search Text. Monthly Rent. Mess Type. All, Boys, Girls, Coed." />
+  <meta name="keywords"
+    content="mess khojo, student mess, pg accommodation, hostel, student housing, mess near me, affordable mess, boys mess, girls mess, coed mess" />
+  <meta name="theme-color" content="#4A148C" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://messkhojo.com/" />
+  <meta property="og:title" content="Mess Khojo - Find Student Messes & PG Accommodations" />
+  <meta property="og:description" content="Find your comfortable stay. Search for the best student messes nearby." />
+  <meta property="og:image" content="https://messkhojo.com/logo.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://messkhojo.com/" />
+  <meta property="twitter:title" content="Mess Khojo - Find Student Messes & PG Accommodations" />
+  <meta property="twitter:description"
+    content="Find your comfortable stay. Search for the best student messes nearby." />
+  <meta property="twitter:image" content="https://messkhojo.com/logo.png" />
+
+  <!-- Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600;700&display=swap"
     rel="stylesheet">
+
+  <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy"
     content="default-src 'self' https://*.firebaseio.com https://*.googleapis.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; img-src 'self' data: https://*.googleapis.com https://*.gstatic.com https://*.google.com https://*.firebaseapp.com https://firebasestorage.googleapis.com http://maps.google.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.firebaseio.com https://www.googletagmanager.com https://*.googleapis.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com wss://*.firebaseio.com https://www.google-analytics.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; frame-src 'self' https://accounts.google.com https://*.firebaseapp.com;">
 </head>
