Fix lint errors, resolve favicon issue, and patch white-screen crash

--- a/antigravity/scratch/mess-khojo/client/index.html
+++ b/antigravity/scratch/mess-khojo/client/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Favicon - Multiple sizes for better browser compatibility -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
-  <link rel="shortcut icon" href="/logo.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
+  <link rel="shortcut icon" href="/favicon.png" />
 
   <!-- Primary Meta Tags -->
   <title>Mess Khojo - Find your comfortable stay. Search for the best student messes nearby</title>
