SEO: Added manifest.json and updated favicon links for Google Search

--- a/antigravity/scratch/mess-khojo/client/index.html
+++ b/antigravity/scratch/mess-khojo/client/index.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Favicon - Multiple sizes for better browser compatibility -->
+  <!-- Favicon - SEO Optimized -->
+  <link rel="icon" href="/favicon.png" type="image/x-icon" />
+  <link rel="icon" type="image/png" sizes="48x48" href="/favicon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
-  <link rel="shortcut icon" href="/favicon.png" />
+  <link rel="manifest" href="/manifest.json" />
 
   <!-- Primary Meta Tags -->
   <title>Mess Khojo - Find your comfortable stay. Search for the best student messes nearby</title>
