--- a/antigravity/scratch/mess-khojo/client/index.html
+++ b/antigravity/scratch/mess-khojo/client/index.html
@@ -14,28 +14,82 @@
   <link rel="manifest" href="/manifest.json" />
 
   <!-- Primary Meta Tags -->
-  <title>Mess Khojo - Find your comfortable stay. Search for the best student messes nearby</title>
-  <meta name="title" content="Mess Khojo - Find Student Messes & PG Accommodations" />
+  <title>MessKhojo - Boys & Girls Mess in Balasore | Near FM College | Hygienic Food & Safe Stay</title>
+  <meta name="title"
+    content="MessKhojo - Boys Mess & Ladies Mess in Balasore | Student Accommodation Near FM University" />
   <meta name="description"
-    content="Find your comfortable stay. Search for the best student messes nearby. Use Current Location. Search Text. Monthly Rent. Mess Type. All, Boys, Girls, Coed." />
+    content="Find best boys mess & girls mess in Balasore near FM College & FM University. Hygienic food, discipline environment, safe for ladies. Direct owner contact, no broker. Compare prices from ₹2000/month." />
   <meta name="keywords"
-    content="mess khojo, student mess, pg accommodation, hostel, student housing, mess near me, affordable mess, boys mess, girls mess, coed mess" />
+    content="boys mess balasore, girls mess balasore, ladies mess balasore, mess near fm college, mess near fm university, student mess balasore, hygienic food mess, discipline girls mess, safe hostel balasore, room rent balasore owner, no broker balasore, pg balasore, messkhojo, nuapadhi hostel, proof road mess" />
   <meta name="theme-color" content="#4A148C" />
+  <meta name="author" content="MessKhojo" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://messkhojo.com/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://messkhojo.com/" />
-  <meta property="og:title" content="Mess Khojo - Find Student Messes & PG Accommodations" />
-  <meta property="og:description" content="Find your comfortable stay. Search for the best student messes nearby." />
+  <meta property="og:title" content="MessKhojo - Boys & Girls Mess in Balasore | Near FM College" />
+  <meta property="og:description"
+    content="Find best boys mess & ladies mess in Balasore. Hygienic food, safe environment, direct owner contact. Near FM College & University." />
   <meta property="og:image" content="https://messkhojo.com/logo.png" />
+  <meta property="og:site_name" content="MessKhojo" />
+  <meta property="og:locale" content="en_IN" />
 
   <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://messkhojo.com/" />
-  <meta property="twitter:title" content="Mess Khojo - Find Student Messes & PG Accommodations" />
-  <meta property="twitter:description"
-    content="Find your comfortable stay. Search for the best student messes nearby." />
-  <meta property="twitter:image" content="https://messkhojo.com/logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://messkhojo.com/" />
+  <meta name="twitter:title" content="MessKhojo - Boys & Girls Mess in Balasore | Near FM College" />
+  <meta name="twitter:description"
+    content="Find best boys mess & ladies mess in Balasore. Hygienic food, safe environment, no broker." />
+  <meta name="twitter:image" content="https://messkhojo.com/logo.png" />
+
+  <!-- Structured Data - Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "MessKhojo",
+    "alternateName": "Mess Khojo",
+    "url": "https://messkhojo.com",
+    "description": "Find affordable mess, PG, and hostel accommodations in Balasore, Odisha",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://messkhojo.com/?search={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- Structured Data - Local Business -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "MessKhojo",
+    "description": "Platform to find and book mess, PG, and hostel accommodations in Balasore",
+    "url": "https://messkhojo.com",
+    "logo": "https://messkhojo.com/logo.png",
+    "image": "https://messkhojo.com/logo.png",
+    "email": "messkhojobalasore@gmail.com",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Balasore",
+      "addressRegion": "Odisha",
+      "addressCountry": "IN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "21.4934",
+      "longitude": "86.9337"
+    },
+    "areaServed": {
+      "@type": "City",
+      "name": "Balasore"
+    },
+    "serviceType": ["Mess Finder", "PG Accommodation", "Student Housing"]
+  }
+  </script>
 
   <!-- Fonts -->
   <link
@@ -44,7 +98,7 @@
 
   <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self' https://*.firebaseio.com https://*.googleapis.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; img-src 'self' data: https://*.googleapis.com https://*.gstatic.com https://*.google.com https://*.firebaseapp.com https://firebasestorage.googleapis.com http://maps.google.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.firebaseio.com https://www.googletagmanager.com https://*.googleapis.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com wss://*.firebaseio.com https://www.google-analytics.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; frame-src 'self' https://accounts.google.com https://*.firebaseapp.com;">
+    content="default-src 'self' https://*.firebaseio.com https://*.googleapis.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; img-src 'self' data: https://*.googleapis.com https://*.gstatic.com https://*.google.com https://*.firebaseapp.com https://firebasestorage.googleapis.com http://maps.google.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.firebaseio.com https://www.googletagmanager.com https://*.googleapis.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com wss://*.firebaseio.com https://www.google-analytics.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com https://api.telegram.org; frame-src 'self' https://accounts.google.com https://*.firebaseapp.com;">
 </head>
 
 <body>
