feat(seo): complete local SEO optimization checklist

--- a/antigravity/scratch/mess-khojo/client/index.html
+++ b/antigravity/scratch/mess-khojo/client/index.html
@@ -14,13 +14,13 @@
   <link rel="manifest" href="/manifest.json" />
 
   <!-- Primary Meta Tags -->
-  <title>MessKhojo - Boys & Girls Mess in Balasore | Near FM College | Hygienic Food & Safe Stay</title>
+  <title>MessKhojo - Boys & Ladies Mess in Balasore | Near FM College | No Broker</title>
   <meta name="title"
-    content="MessKhojo - Boys Mess & Ladies Mess in Balasore | Student Accommodation Near FM University" />
+    content="MessKhojo - Best Boys Mess & Ladies Mess in Balasore | No Broker Room Rent" />
   <meta name="description"
-    content="Find best boys mess & girls mess in Balasore near FM College & FM University. Hygienic food, discipline environment, safe for ladies. Direct owner contact, no broker. Compare prices from ₹2000/month." />
+    content="Find the best boys mess & ladies mess in Balasore near FM College & Nuapadhi. Hygienic food, discipline environment, safe hostels. Direct owner contact, no broker." />
   <meta name="keywords"
-    content="boys mess balasore, girls mess balasore, ladies mess balasore, mess near fm college, mess near fm university, student mess balasore, hygienic food mess, discipline girls mess, safe hostel balasore, room rent balasore owner, no broker balasore, pg balasore, messkhojo, nuapadhi hostel, proof road mess" />
+    content="boys mess balasore, ladies mess balasore, girls mess balasore, discipline girls mess, mess near fm college, hygienic food mess, nuapadhi hostel, safe ladies mess balasore, room rent balasore owner, no broker mess balasore, hostels in balasore" />
   <meta name="theme-color" content="#4A148C" />
   <meta name="author" content="MessKhojo" />
   <meta name="robots" content="index, follow" />
@@ -29,9 +29,9 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://messkhojo.com/" />
-  <meta property="og:title" content="MessKhojo - Boys & Girls Mess in Balasore | Near FM College" />
+  <meta property="og:title" content="MessKhojo - Boys & Ladies Mess in Balasore | No Broker" />
   <meta property="og:description"
-    content="Find best boys mess & ladies mess in Balasore. Hygienic food, safe environment, direct owner contact. Near FM College & University." />
+    content="Find the best boys mess & ladies mess in Balasore. Hygienic food, safe environment, direct owner contact. Near FM College & Nuapadhi." />
   <meta property="og:image" content="https://messkhojo.com/logo.png" />
   <meta property="og:site_name" content="MessKhojo" />
   <meta property="og:locale" content="en_IN" />
@@ -39,9 +39,9 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://messkhojo.com/" />
-  <meta name="twitter:title" content="MessKhojo - Boys & Girls Mess in Balasore | Near FM College" />
+  <meta name="twitter:title" content="MessKhojo - Boys & Ladies Mess in Balasore | No Broker" />
   <meta name="twitter:description"
-    content="Find best boys mess & ladies mess in Balasore. Hygienic food, safe environment, no broker." />
+    content="Find the best boys mess & ladies mess in Balasore. Hygienic food, safe environment, direct owner contact." />
   <meta name="twitter:image" content="https://messkhojo.com/logo.png" />
 
   <!-- Structured Data - Organization -->
